--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ database:
   server: 'THUONGSPC\SQLEXPRESS'
   database: 'simigo_dw'
   username: 'thuong_admin'
-  password: 'bJD8wI!MPv2b$36T'
+  password: 'hello'
